Rewrite task 42